fixing spacing on headers

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,16 @@ p {
     padding-top:2em;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin-top: 2.5em;
+    margin-bottom: 0.5em;
+    line-height: 1.2;
+}
+
+h1:first-child, h2:first-child, h3:first-child, h4:first-child, h5:first-child, h6:first-child {
+    margin-top: 0;
+}
+
 .attr {
     text-align: right;
 }
